<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#721397"
    tools:context=".SesionIniciada"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tv_hola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="151dp"
        android:layout_marginTop="66dp"
        android:text="@string/tv_hola"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tv_avisodos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_avisodos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="59dp"
        android:layout_marginStart="59dp"
        android:gravity="center"
        android:text="@string/tv_avisodos"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_cerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hola" />

    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="44dp"
        android:layout_marginEnd="66dp"
        android:layout_marginStart="66dp"
        android:text="@string/btn_cerrar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_avisodos" />
</android.support.constraint.ConstraintLayout>